Preprocess with documentation and usage in Final Jupyter Notebook

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -10,22 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/benjamin.mok/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/benjamin.mok/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -56,7 +43,49 @@
     "from nltk.tokenize import TweetTokenizer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.stem import PorterStemmer\n",
-    "from nltk.tokenize import word_tokenize"
+    "from nltk.tokenize import sent_tokenize\n",
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODO: this package nltk.download(wordnet) is for lemmatize to work\n",
+    "# The download did not work so we have to use the below code.. lol\n",
+    "\n",
+    "# Please run this code and SSL will pop up a window for you to choose a\n",
+    "# Module to download, click 'all packages' and scroll down\n",
+    "# and select 'wordnet'. You only need to download it once. \n",
+    "# Not tested in Google Colab :3\n",
+    "import ssl\n",
+    "try:\n",
+    "    _create_unverified_https_context = ssl._create_unverified_context\n",
+    "except AttributeError:\n",
+    "    pass\n",
+    "else:\n",
+    "    ssl._create_default_https_context = _create_unverified_https_context\n",
+    "nltk.download()\n"
    ]
   },
   {
@@ -68,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,55 +250,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocess\n",
+    "* Lemmatize: (study -> study, studies -> study)\n",
+    "* Stemmatize: (study -> study, studies -> studi)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess(text, method=None, tokenizer=None):\n",
+    "# Preprocess the data prior to running the model using this function\n",
+    "# TODO: Here I've commented out the punctuation regex section\n",
+    "# Feel free to uncomment that part BUT I think we should leave it out\n",
+    "# altogether. See below for usage.\n",
+    "\n",
+    "def preprocess(text, method=None, tokenizer=sent_tokenize, rm_stop=False): \n",
+    "    \"\"\"Returns a text processed string.\n",
+    "\n",
+    "    Arguments:\n",
+    "    text      -- String, func is designed for loops\n",
+    "    \n",
+    "    method    -- ('s','l') Specify from s - stemmatize, l - lemmatize.\n",
+    "                 None will mean you do not want to remove suffix.\n",
+    "                 \n",
+    "    tokenizer -- Any tokenizer function, from word to sentence to tweet.\n",
+    "                 Tokenizer must not be an object.method unless you\n",
+    "                 specifiy it to be like TweetTokenizer.tokenize.\n",
+    "                 Sentence tokenizer is initialized here.\n",
+    "                 \n",
+    "    rm_stop   -- Bool. Remove stop words or not.\n",
+    "    \"\"\"\n",
+    "\n",
     "    #remove line breaks\n",
     "    text = re.sub(r\"\\n\",\"\",text)\n",
-    "\n",
+    "    # remove trailing spaces\n",
+    "    text = re.sub(r'[ \\t]+$','', text)\n",
     "    #convert to lowercase \n",
     "    text = text.lower()\n",
-    "\n",
     "    #remove digits and currencies \n",
     "    text = re.sub(r\"\\d+\",\"\",text) \n",
-    "    text = re.sub(r'[\\$\\d+\\d+\\$]', \"\", text)      \n",
-    "\n",
+    "    text = re.sub(r'[\\$\\d+\\d+\\$]', \"\", text)\n",
     "    #remove dates \n",
     "    text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
     "    text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
     "    text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
-    "\n",
     "    #remove non-ascii\n",
     "    text = re.sub(r'[^\\x00-\\x7f]',r' ',text) \n",
-    "\n",
-    "    #remove punctuation\n",
-    "    text = re.sub(r'[^\\w\\s]','',text) \n",
-    "\n",
     "    #remove hyperlinks\n",
     "    #text = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '', text)\n",
     "    text = re.sub(r'http\\S+', '', text, flags=re.MULTILINE)\n",
+    "\n",
+    "    #remove punctuation\n",
+    "    # Leave it? or talking point?!\n",
+    "    #text = re.sub(r'[^\\w\\s]','',text)\n",
     "    \n",
-    "    # remove trailing spaces\n",
-    "    text = re.sub(r'[ \\t]+$','', text)\n",
-    "    \n",
-    "    if method.lower() == 'l':\n",
+    "    if rm_stop:\n",
+    "        filtered_tokens = [word for word in tokenizer(text) \n",
+    "                           if not word in set(stopwords.words('english'))]\n",
+    "        text = \" \".join(filtered_tokens)\n",
+    "        \n",
+    "    if method == 'l':\n",
     "        lemmer = WordNetLemmatizer()\n",
-    "        lemm_tokens = [lemmer.lemmatize(word) for word in tokenizer(text)]\n",
+    "        lemm_tokens = [lemmer.lemmatize(word) \n",
+    "                       for word in tokenizer(text)]\n",
     "        return \" \".join(lemm_tokens)\n",
     "    \n",
-    "    elif method.lower() == 's':\n",
+    "    elif method == 's':\n",
     "        porter = PorterStemmer()\n",
-    "        stem_tokens = [porter.stem(word) for word in tokenizer(text)]\n",
+    "        stem_tokens = [porter.stem(word) \n",
+    "                       for word in tokenizer(text)]\n",
     "        return \" \".join(stem_tokens)\n",
-    "    \n",
-    "    return text\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage\n",
+    "### If someone wants to write a function that spits out all the possible model methods please do. This is to keep in mind that we are using K-folds CV to bag-> bootstrap our data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score on no SW removal, no suffix striping and TFIDF:\n",
+      "F1 Score: 0.7702\n",
+      "Accuracy: 0.7720\n",
+      "\n",
+      "\n",
+      "Test on Lemmatize, remove stop and CountVectorize:\n",
+      "F1 Score: 0.7676\n",
+      "Accuracy: 0.7661\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "#df_ = df.sample(frac=1).reset_index()\n",
     "\n",
-    "    # remove stop words, yea don't remove stop words.\n",
-    "    # filtered_tokens = [word for word in word_tokenize(text) if not word in stop_words]\n",
-    "    # text = (\"\").join(filtered_tokens)"
+    "# No stop word removal and no suffix cleaning. Naive Bayes example run\n",
+    "# I'll use CountVectorize in this to vectorize data.\n",
+    "\n",
+    "df_ = df\n",
+    "\n",
+    "# Process data in loop\n",
+    "processed_full = []\n",
+    "for i in df_.text:\n",
+    "    processed_full.append(preprocess(i))\n",
+    "df_.text = processed_full\n",
+    "\n",
+    "# numtest = int(len(df_)/3.5)\n",
+    "# df_test = df_[:int(numtest/2)].reset_index(drop=True)\n",
+    "# df_dev = df_[int(numtest/2):numtest].reset_index(drop=True)\n",
+    "numtest = int(len(df_)/5)\n",
+    "df_train = df_[numtest:].reset_index(drop=True)\n",
+    "df_test = df_[:numtest].reset_index(drop=True) \n",
+    "\n",
+    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
+    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
+    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)\n",
+    "# Naive Bayes example run\n",
+    "# I'll use TF-IDF in this to vectorize data.\n",
+    "\n",
+    "tfidf = TfidfVectorizer()\n",
+    "t_data = tfidf.fit_transform(train_data)\n",
+    "dt_data = tfidf.transform(dev_data)\n",
+    "tt_data = tfidf.transform(test_data)\n",
+    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label)\n",
+    "pred = m_nb.predict(dt_data)\n",
+    "pred_test = m_nb.predict(tt_data)\n",
+    "print('Score on no SW removal, no suffix striping and TFIDF:')\n",
+    "print('F1 Score: {:.4f}'.format(metrics.f1_score(test_label, pred_test, average='weighted')))\n",
+    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(test_label, pred_test)))\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "# Lemmatization, no stop words removal, Naive Bayes example run\n",
+    "# I'll use CountVectorize in this to vectorize data.\n",
+    "\n",
+    "tokenizer = word_tokenize\n",
+    "df_ = df\n",
+    "\n",
+    "processed_full = []\n",
+    "for i in df_.text:\n",
+    "    processed_full.append(preprocess(i,method='l',tokenizer=tokenizer,rm_stop=True))\n",
+    "df_.text = processed_full\n",
+    "\n",
+    "numtest = int(len(df_)/5)\n",
+    "df_train = df_[numtest:].reset_index(drop=True)\n",
+    "df_test = df_[:numtest].reset_index(drop=True)\n",
+    "\n",
+    "train_data, train_label = np.array(df_train.text), np.array(df_train.target)\n",
+    "dev_data, dev_label = np.array(df_dev.text), np.array(df_dev.target)\n",
+    "test_data, test_label = np.array(df_test.text), np.array(df_test.target)\n",
+    "\n",
+    "tfidf = CountVectorizer(ngram_range=(1,1))\n",
+    "t_data = tfidf.fit_transform(train_data)\n",
+    "dt_data = tfidf.transform(dev_data)\n",
+    "tt_data = tfidf.transform(test_data)\n",
+    "m_nb = MultinomialNB(alpha=0.9).fit(t_data, train_label) # best alpha from project 3\n",
+    "pred = m_nb.predict(dt_data)\n",
+    "pred_test = m_nb.predict(tt_data)\n",
+    "print()\n",
+    "print('Test on Lemmatize, remove stop and CountVectorize:')\n",
+    "print('F1 Score: {:.4f}'.format(metrics.f1_score(test_label, pred_test, average='weighted')))\n",
+    "print('Accuracy: {:.4f}'.format(metrics.accuracy_score(test_label, pred_test)))"
    ]
   },
   {
@@ -286,7 +443,8 @@
     "### After the data has been cleaned and text pre-processed, we can begin exploring different algorithms. The three machine learning algorithms we will focus on are:\n",
     "* Naive Bayes\n",
     "* Logistic Regression\n",
-    "* SVM\n"
+    "* SVM\n",
+    "* KMeans clustering"
    ]
   },
   {
