--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -53,11 +53,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cF1EguFuKMH1",
-        "outputId": "3b1f19ed-d7fd-4ebe-d42d-e9dfeecf0088",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cF1EguFuKMH1",
+        "outputId": "3b1f19ed-d7fd-4ebe-d42d-e9dfeecf0088"
       },
       "source": [
         "%matplotlib inline\n",
@@ -179,12 +179,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9QWu6xYaKMH4",
-        "outputId": "088bff43-6341-4602-a9bf-97c381be257b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 451
-        }
+        },
+        "id": "9QWu6xYaKMH4",
+        "outputId": "088bff43-6341-4602-a9bf-97c381be257b"
       },
       "source": [
         "#read in data\n",
@@ -254,12 +254,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fjc9o_24SN12",
-        "outputId": "b7e67597-fc99-4a55-a937-ce3ee7c24eb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "fjc9o_24SN12",
+        "outputId": "b7e67597-fc99-4a55-a937-ce3ee7c24eb0"
       },
       "source": [
         "#CREDIT TO SOURCES: \n",
@@ -306,12 +306,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PbuWUL9iTPG6",
-        "outputId": "cb8f4160-b727-4994-850f-2e6d02eceed0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "id": "PbuWUL9iTPG6",
+        "outputId": "cb8f4160-b727-4994-850f-2e6d02eceed0"
       },
       "source": [
         "duplct_cnt = len(train_data['text'])-len(train_data['text'].drop_duplicates())\n",
@@ -400,12 +400,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0LPbMY_HV0vo",
-        "outputId": "a42ab131-6df7-421f-8605-5339ecf41c61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        }
+        },
+        "id": "0LPbMY_HV0vo",
+        "outputId": "a42ab131-6df7-421f-8605-5339ecf41c61"
       },
       "source": [
         "dups = df[df.duplicate_tweet == 'yes']\n",
@@ -510,18 +510,18 @@
         "*   different versions of the same entity (e.g. United States, USA) \n",
         "*   unidentifiable location (e.g. ) \n",
         "\n",
-        "After attempting to clean the data, we were able to categorize a significant amount of tweets by country, but the vast majority of tweets were unable to be classified correctly. "
+        "After attempting to clean the data, we were able to categorize a significant amount of tweets by country, but the vast majority of tweets were unable to be classified correctly. As a result, we determined that it would be best not to include location data in our models."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2m7SSrxqVFXg",
-        "outputId": "e4899c93-2b0f-4b3d-b729-196ab9265a29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "id": "2m7SSrxqVFXg",
+        "outputId": "e4899c93-2b0f-4b3d-b729-196ab9265a29"
       },
       "source": [
         "df[['location', 'target']].dropna(subset=['location']).groupby('location').count().sort_values(by='target', ascending=False).head(10)"
@@ -739,12 +739,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NMiP6Dq7Zz9m",
-        "outputId": "85def71a-de12-4b17-bce8-6d38f3b0bf3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "NMiP6Dq7Zz9m",
+        "outputId": "85def71a-de12-4b17-bce8-6d38f3b0bf3d"
       },
       "source": [
         "#segment and plot by tweet type\n",
@@ -868,12 +868,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OYK_YBAPcafG",
-        "outputId": "f70459cc-c279-4a71-a4d2-7881fe153846",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 308
-        }
+        },
+        "id": "OYK_YBAPcafG",
+        "outputId": "f70459cc-c279-4a71-a4d2-7881fe153846"
       },
       "source": [
         "#segment and plot by tweet type\n",
