--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -47,7 +47,10 @@
         "\n",
         "**Problem**: However, a user's intent in a tweet isn't always clear. Words, such as \"ablaze\", can be used in multiple contexts. It can be descriptive of a sunset or it could be indicative of something more serious, like a forest fire. \n",
         "\n",
-        "##### **Approach**: For this project, we will use a data set of twitter posts, found on [Kaggle](https://www.kaggle.com/c/nlp-getting-started). The goal is to identify an algorithm that most accuractely classifies a tweet as indicative of a real disaster or not a real disaster. "
+        "##### **Approach**: For this project, we will use a data set of twitter posts, found on [Kaggle](https://www.kaggle.com/c/nlp-getting-started). The goal is to identify an algorithm that most accuractely classifies a tweet as indicative of a real disaster or not a real disaster. \n",
+        "\n",
+        "**Summary**:\n",
+        "\n"
       ]
     },
     {
@@ -173,7 +176,12 @@
       },
       "source": [
         "# Exploratory Data Analysis: \n",
-        "First, we will read in the \"train\" dataset, which contains the correct labels. We will split the data 50/50 between train and dev (or test). For ease of analysis and text processing, the data will be further split into \"pos\" (label = 1) and \"neg\" (label = 0) dataframes and text only. "
+        "\n",
+        "* Dataset contains 7613 observations (i.e. rows) and 5 features (i.e.columns)\n",
+        "* Dataset contains missing values and spaces, indicated by NaN and %20 values\n",
+        "* There are 61 missing values under the keyword column\n",
+        "* There are 2533 missing values in the location column\n",
+        "* The training set shows an imbalance between classification types (i.e. tweet is/is not about a disaster)"
       ]
     },
     {
@@ -707,7 +715,7 @@
         "outputId": "85def71a-de12-4b17-bce8-6d38f3b0bf3d"
       },
       "source": [
-        "#segment and plot by tweet type\n",
+        "#plot locations by tweet type\n",
         "\n",
         "disaster_tweets = ldf.loc[df['target'] == 1]\n",
         "dt = disaster_tweets[['country', 'location']].groupby('country').count().sort_values(by='location', ascending=False).head(10)\n",
