--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -1909,7 +1909,7 @@
         "  max_f1_score = np.where(f1_score_list == max(f1_score_list))\n",
         "\n",
         "  #print max scores\n",
-        "  print(\"F1 score of {:.2%}\".format(f1_scores[max_f1_score[0][0]]), \"with a C =\", c_values[max_f1_score[0][0]], \"and the highest accuracy score of {:.2%}\".format(accuracy_scores[max_accuracy_score[0][0]]), \"with C =\", c_values[max_accuracy_score[0][0]],\".\")\n",
+        "  return(\"F1 score of {:.2%}\".format(f1_scores[max_f1_score[0][0]]), \"with a C =\", c_values[max_f1_score[0][0]], \"and the highest accuracy score of {:.2%}\".format(accuracy_scores[max_accuracy_score[0][0]]), \"with C =\", c_values[max_accuracy_score[0][0]],\".\")\n",
         "\n",
         "print(\"The model using CountVectorizer had the highest\", log_model(train, train_labels))\n",
         "print(\"The model using TfidfVectorizer had the highest\", log_model(tfid_train, train_labels))"
