--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -492,12 +492,12 @@
       "source": [
         "## Location Data Considerations:\n",
         "\n",
-        "Much of the location data is not classified consistently--that is, it contains: \n",
+        "Much of the location data is not classified consistently and lacks standardization--that is, it contains: \n",
         "*   different levels of granularity (countries, states, cities)\n",
         "*   different versions of the same entity (e.g. United States, USA) \n",
         "*   unidentifiable location (e.g. ) \n",
         "\n",
-        "After attempting to clean the data, we were able to categorize a significant amount of tweets by country, but the vast majority of tweets were unable to be classified correctly. As a result, we determined that it would be best not to include location data in our models."
+        "After attempting to clean the data, we were able to categorize a significant amount of tweets by country, but unfortunately, we were still unable to classify the vast majority of tweets correctly. We considered leveraging the ISO abbreviation which has only two letters, but it leaves a lot of room for error. Since the [majority of Twitter users are based in the US](https://www.statista.com/statistics/242606/number-of-active-twitter-users-in-selected-countries/), state and country abbreviations could easily be confused. As a result, we determined that it would be best not to include location data in our models."
       ]
     },
     {
