--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -2060,7 +2060,7 @@
         "id": "JFnKD8FO63KL"
       },
       "source": [
-        "We decided to test logistic regression as a binary classification problems are ideal use cases. Logistic regression algorithm can also utilize the additional features that we created from the tweet text (i.e. 'is_retweet', 'has_mentions', 'has_links'). This classifer will use a weighted combination of the input features and pass them through a sigmoid function. The sigmoid function will allow it to classify the tweet as either a disaster or non-disaster tweet using the values, 1 and 0.\n",
+        "We decided to test logistic regression as a binary classification problems are ideal use cases for this classifier. Logistic regression algorithm can also utilize the additional features that we created from the tweet text (i.e. 'is_retweet', 'has_mentions', 'has_links'). This classifer uses a weighted combination of the input features and passws them through a sigmoid function. The sigmoid function then allows it to classify the tweet as either a disaster or non-disaster tweet using the values, 1 and 0.\n",
         "\n",
         "The best result that we were able to yield with this model was through the use of TfidfVectorizer, no stop word removal, and no suffix striping. This combination yielded an F1 score of 72.58% (with a C = 1) and the best accuracy score of 72.76% (with C = 0.5)."
       ]
